# EvidenceDetection-NLP

./: .env.example  .gitignore  README.md  peregrine-setup.sh  pyproject.toml  requirements.txt  spark_sql.ipynb  submit-job.sh
data/: cmv_original.csv  cmv_test.csv  cmv_train.csv  corpus_filtered.csv  corpus_test.csv  corpus_train.csv  corpus_valid.csv
ltp/: __main__.py  prompt.py
notebooks/: Openprompt.ipynb  bar_plot_data.ipynb  ensemble_prompt_classification.ipynb  ensemble_prompts.ipynb  ensemble_prompts_cmv.ipynb  ensemble_promtps_glove.ipynb  gpt-3.ipynb  gpt-j-evaluation.ipynb  preprocessing.ipynb  preprocessing_cmv.ipynb
notebooks/archive/: evidence.ipynb  probe.ipynb
scripts/: find_token_id.py
