[tool.poetry]
name = "ltp-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
numpy = "^1.22.3"
matplotlib = "^3.5.2"
jupyter = "^1.0.0"
sklearn = "^0.0"
pandas = "^1.4.2"
spacy = "^3.3.0"
seaborn = "^0.11.2"
torch = "^1.11.0"
torchvision = "^0.12.0"
torchaudio = "^0.11.0"
transformers = {extras = ["tf-cpu"], version = "^4.17.0"}
datasets = "^2.0.0"
python-dotenv = "^0.20.0"
openai = "^0.18.1"
click = "^8.1.3"
protobuf = "3.20.1"
statsmodels = "^0.13.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.960"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
